--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,14 +26,22 @@ footer {
     background-color: #f5f5f5;
 }
 
+.navbar {
+    padding: 0 0 0 0;
+    
+}
+
+    .navbar-text {
+        
+        padding: 20px 0 0 0;
+        height: 100px;
+    }
+
 .navbaralltheway {
     background: #ffffff;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    height: 100px;
     border-bottom: solid 1px #cccccc;
-    padding: 0 0 0 0;
-    width: 100%;
 
 }
 
@@ -44,12 +52,51 @@ footer {
         font-size: 40px;
         text-align: center;
         font-weight: bold;
+        padding-left: 10px;
+        padding-right: 10px;
     
     }
-
+           
+    /* Contact link deocrations */
     .contactlinks {
-        border: 1px black solid;
-        height: 40px;
-        
+        font-size: 20px;
     }
 
+        element.style {
+        }
+
+        a:visited {
+            text-decoration: none;
+        }
+        a:link {
+            text-decoration: none;
+        }
+        a {
+            color: #777777;
+            text-decoration: none;
+        }
+
+.container1 {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+
+.aboutme {
+    background: #ffffff;
+    border-top: #dddddd solid 1px;
+    border-right: #dddddd solid 1px;
+    border-left: #dddddd solid 1px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40px;
+    color: #4aaaa5;
+    font-weight: bold;
+    padding: 15px 15px;
+}
+
+.row2 {
+    background: #ffffff;
+    border-bottom: #dddddd solid 1px;
+    border-right: #dddddd solid 1px;
+    border-left: #dddddd solid 1px;
+}
