--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    margin-bottom: 90px;
     background: url("../images/rockywall.png");
 }
 
@@ -22,8 +22,11 @@ footer {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
-    background-color: #f5f5f5;
+    height: 90px;
+    color: #ffffff;
+    border-top: 20px solid #4aaaa5;
+    background: #666666;
+
 }
 
 .navbar {
@@ -54,6 +57,8 @@ footer {
         font-weight: bold;
         padding-left: 10px;
         padding-right: 10px;
+        position: relative;
+        left: -15px;
     
     }
            
@@ -94,9 +99,16 @@ footer {
     padding: 15px 15px;
 }
 
+.profilepic {
+    margin-right: 20px;
+
+}
+
 .row2 {
     background: #ffffff;
     border-bottom: #dddddd solid 1px;
     border-right: #dddddd solid 1px;
     border-left: #dddddd solid 1px;
+    line-height: 30px;
+    
 }
