--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ footer {
     .navbartitle {
         box-sizing: border-box;
         background: #4aaaa5;
-        color: white;
+        color: white !important; 
         font-size: 40px;
         text-align: center;
         font-weight: bold;
@@ -55,6 +55,7 @@ footer {
         padding-right: 10px;
         position: relative;
         left: -15px;
+     
     }
            
     /* Contact link deocrations */
